--- a/app/src/main/res/layout/apptoolbar.xml
+++ b/app/src/main/res/layout/apptoolbar.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="doNeed"
-        android:fontFamily="@font/lato"
+        android:fontFamily="@font/cocogoose"
         android:layout_centerVertical="true"
         android:textSize="25sp"
         android:layout_marginStart="26dp"
@@ -22,7 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Donate"
-        android:fontFamily="@font/lato"
+        android:fontFamily="@font/cocogoose"
         android:layout_centerVertical="true"
         android:textSize="25sp"
         android:layout_marginStart="0dp"
