--- a/app/src/main/res/drawable/text_background.xml
+++ b/app/src/main/res/drawable/text_background.xml
@@ -3,8 +3,9 @@
 
     <corners android:radius="10dp"/>
     <solid android:color="@color/white"/>
-    <stroke android:width="1dp"
-        android:color="@color/darkGrey">
+    <stroke android:width="0dp"
+        android:color="#CAC7C7"
+        >
 
     </stroke>
 
