--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -27,7 +27,7 @@
             android:id="@+id/bottom_navigation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/white"
+            android:background="#F4F4F4"
             app:itemIconTint="@color/selector"
             app:labelVisibilityMode="unlabeled"
             app:menu="@menu/bottom_nav_menu">
