--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,11 +11,23 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#1C1C1C</color>
     <color name="dark">#000000</color>
-    <color name="white">#FFFFFF</color>
+    <color name="white">#F8F8FF</color>
     <color name="grey">#C6C6C6</color>
     <color name="lightGrey">#F2F2F2</color>
     <color name="darkGrey">#707070</color>
     <color name="blue">#1B75B5</color>
+    <color name="white2">#ffffff</color>
+
+
+
+    <color name="colorPrimary">#5770f3</color>
+    <color name="colorPrimaryDark">#5770f3</color>
+    <color name="colorAccent">#D81B60</color>
+    <color name="gradient_start">#5770f3</color>
+    <color name="gradient_end">#8e5aeb</color>
+    <color name="profile_desc">#D1D1FF</color>
+    <color name="bg_meta_container">#000000</color>
+    <color name="profile_default_tint">#e0e0e0</color>
 
 </resources>
 
