--- a/app/src/main/res/menu/setting_toolbar.xml
+++ b/app/src/main/res/menu/setting_toolbar.xml
@@ -1,4 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
+<!--    ni tak guna pon-->
+    <item
+        android:id="@+id/donate_now"
+        android:title="Post"
+        android:icon="@drawable/exit"
+        android:alpha="0.4"
+        app:showAsAction="ifRoom|withText"
+        />
 </menu>
