--- a/app/src/main/res/layout/activity_test.xml
+++ b/app/src/main/res/layout/activity_test.xml
@@ -4,255 +4,65 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginActivity"
-
-
+    android:background="@color/yellow_musterd"
     >
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintLayout2"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_centerInParent="true"
-        android:background="@color/yellow_musterd"
+        tools:layout_editor_absoluteX="77dp"
+        tools:layout_editor_absoluteY="30dp">
 
-        android:padding="1dp">
-
-
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/yellow_musterd"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-
-                >
-
-                <ImageView
-                    android:id="@+id/close"
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
-
-                    android:layout_alignParentStart="true"
-                    android:layout_alignParentTop="true"
-                    android:layout_alignParentBottom="true"
-                    android:layout_marginStart="0dp"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginBottom="15dp"
-                    android:src="@drawable/arrow" />
-
-                <Button
-                    android:id="@+id/post"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_centerVertical="true"
-                    android:layout_marginEnd="15dp"
-                    android:text="Save"
-                    android:textColor="@color/white"
-                    android:textSize="16sp"
-                    app:backgroundTint="@color/dark" />
-
-
-            </RelativeLayout>
-
-
-        </androidx.appcompat.widget.Toolbar>
-
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/image_profile"
-            android:layout_width="120dp"
-            android:layout_height="120dp"
-            android:layout_marginStart="24dp"
-            android:layout_marginTop="20dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/toolbar" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="36dp"
-            android:layout_marginTop="60dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="44dp"
             android:fontFamily="@font/cocogoose"
-            android:text="Address"
-            android:textColor="@color/dark"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toEndOf="@+id/image_profile"
-            app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+            android:text="doNeed"
+            android:textColor="#54000000"
+            android:textSize="65sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.cardview.widget.CardView
 
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="250dp"
-
-            android:layout_marginBottom="-30dp"
-            android:alpha="1"
-            android:paddingBottom="10dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="100dp"
+            android:layout_marginEnd="20dp"
+            app:cardUseCompatPadding="false"
+            android:layout_marginBottom="30dp"
+            android:alpha="0.9"
             app:cardBackgroundColor="@color/white"
             app:cardCornerRadius="38dp"
-            app:cardElevation="10dp">
+            app:cardElevation="8dp"
+            app:layout_constraintBottom_toBottomOf="parent">
 
-            <androidx.constraintlayout.widget.ConstraintLayout
+            <ScrollView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
-
-
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="30dp"
-                    >
-
-                    <LinearLayout
-                        android:id="@+id/username_field"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="30dp"
-                        android:layout_marginRight="40dp"
-                        android:layout_marginLeft="40dp"
-                        android:orientation="vertical">
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="User Name"
-                            android:textStyle="bold"
-                            android:layout_marginStart="3dp"
-                            android:textSize="13sp"
-                            android:textColor="@color/dark"
-                            android:fontFamily="@font/lato"/>
-                        <EditText
-                            android:id="@+id/username"
-                            android:layout_marginTop="1dp"
-                            android:layout_width="match_parent"
-                            android:layout_height="40dp"
-                            android:textColor="@color/black"
-                            android:backgroundTint="@color/grey"
-                            android:inputType="textPassword"/>
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:id="@+id/email_field"
-                        android:layout_below="@+id/username_field"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="25dp"
-                        android:layout_marginRight="40dp"
-                        android:layout_marginLeft="40dp"
-                        android:orientation="vertical">
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="Email"
-                            android:textStyle="bold"
-                            android:textSize="13sp"
-                            android:layout_marginStart="3dp"
-                            android:textColor="@color/dark"
-                            android:fontFamily="@font/lato"
-                            />
-                        <EditText
-                            android:id="@+id/login_email"
-                            android:layout_marginTop="1dp"
-                            android:layout_width="match_parent"
-                            android:layout_height="40dp"
-                            android:textColor="@color/black"
-                            android:backgroundTint="@color/grey"
-                            android:inputType="textEmailAddress"
-                            />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:id="@+id/phoneNumber_field"
-                        android:layout_below="@+id/email_field"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="30dp"
-                        android:layout_marginRight="40dp"
-                        android:layout_marginLeft="40dp"
-                        android:orientation="vertical">
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="Phone Number"
-                            android:layout_marginStart="3dp"
-                            android:textSize="13sp"
-                            android:textColor="@color/dark"
-                            android:fontFamily="@font/lato"
-                            android:textStyle="bold"
-                            />
-                        <EditText
-                            android:id="@+id/phoneNumber"
-                            android:layout_marginTop="1dp"
-                            android:layout_width="match_parent"
-                            android:layout_height="40dp"
-                            android:textColor="@color/black"
-                            android:backgroundTint="@color/grey"
-                            android:inputType="phone"/>
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:id="@+id/address_field"
-                        android:layout_below="@+id/phoneNumber_field"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="30dp"
-                        android:layout_marginRight="40dp"
-                        android:layout_marginLeft="40dp"
-                        android:orientation="vertical">
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:text="Address"
-                            android:layout_marginStart="3dp"
-                            android:textSize="13sp"
-                            android:textColor="@color/dark"
-                            android:fontFamily="@font/lato"
-                            android:textStyle="bold"
-                            />
-                        <EditText
-                            android:id="@+id/login_password"
-                            android:layout_marginTop="1dp"
-                            android:layout_width="match_parent"
-                            android:layout_height="40dp"
-                            android:textColor="@color/black"
-                            android:backgroundTint="@color/grey"
-                            android:inputType="textPassword"/>
-                    </LinearLayout>
-
-
-                </RelativeLayout>
+                android:layout_height="match_parent">
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.496"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintVertical_bias="0.3">
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
 
-
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="hai"
+                        android:layout_marginTop="600dp"/>
                 </LinearLayout>
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
+            </ScrollView>
 
         </androidx.cardview.widget.CardView>
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
