--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -7,6 +7,7 @@
         <item name="colorPrimary">@color/white</item>
         <item name="colorPrimaryDark">@color/black</item>
         <item name="colorAccent">@color/yellow_musterd</item>
+        <item name="android:textColorPrimary">@color/white</item>
     </style>
 
     <style name="Cut" parent="ShapeAppearance.MaterialComponents.MediumComponent">
