--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -119,6 +119,15 @@
                             android:padding="6dp"
                             android:text="Profile settings"
                             android:textSize="15sp" />
+
+                        <Button
+                            android:id="@+id/chat_button"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:padding="6dp"
+                            android:text="Chat Now"
+                            android:textSize="15sp"
+                            android:visibility="gone"/>
                     </LinearLayout>
                 </LinearLayout>
 
