--- a/app/src/main/res/layout/details_item.xml
+++ b/app/src/main/res/layout/details_item.xml
@@ -7,7 +7,6 @@
     android:background="@color/yellow_musterd">
 
 
-
     <ImageView
         android:id="@+id/post_image"
         android:layout_width="match_parent"
@@ -15,9 +14,8 @@
         android:src="@drawable/add"
         app:layout_constraintDimensionRatio="5:4"
         tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="3dp"
-        tools:layout_editor_absoluteY="4dp"
-        />
+        tools:layout_editor_absoluteX="44dp"
+        tools:layout_editor_absoluteY="5dp" />
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -37,7 +35,7 @@
             android:layout_height="362dp"
             android:scrollbars="vertical">
 
-            <androidx.constraintlayout.widget.ConstraintLayout
+            <RelativeLayout
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 >
@@ -46,6 +44,9 @@
                     android:id="@+id/post_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginStart="17dp"
                     android:layout_marginTop="12dp"
                     android:fontFamily="@font/cocogoose"
                     android:text="asdasdasdsad"
@@ -60,7 +61,12 @@
                     android:id="@+id/save"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    android:layout_marginEnd="16dp"
+                    android:layout_alignTop="@+id/post_title"
+                    android:layout_alignBottom="@+id/post_title"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginTop="3dp"
+                    android:layout_marginEnd="29dp"
+                    android:layout_marginBottom="3dp"
                     android:src="@drawable/ic_save"
                     app:layout_constraintBottom_toBottomOf="@+id/post_title"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -71,11 +77,16 @@
                     android:id="@+id/optionIcon"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    android:layout_marginEnd="16dp"
-                    android:src="@drawable/ic_option"
-                    android:visibility="gone"
-                    app:layout_constraintBottom_toBottomOf="@+id/post_title"
+                    android:layout_alignTop="@+id/post_title"
 
+                    android:layout_alignBottom="@+id/post_title"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginEnd="29dp"
+                    android:layout_marginBottom="3dp"
+                    android:src="@drawable/ic_option"
+                    android:visibility="visible"
+                    app:layout_constraintBottom_toBottomOf="@+id/post_title"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/post_title"
                     app:tint="@color/black" />
@@ -84,7 +95,10 @@
                     android:id="@+id/image_profile"
                     android:layout_width="35dp"
                     android:layout_height="35dp"
-                    android:layout_marginTop="20dp"
+                    android:layout_below="@+id/post_title"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginStart="18dp"
+                    android:layout_marginTop="10dp"
                     app:layout_constraintStart_toStartOf="@+id/post_title"
                     app:layout_constraintTop_toBottomOf="@+id/post_title" />
 
@@ -92,9 +106,13 @@
                     android:id="@+id/usernamepost"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_alignTop="@+id/image_profile"
+                    android:layout_alignBottom="@+id/image_profile"
                     android:layout_gravity="center_vertical"
-                    android:layout_marginStart="10dp"
-                    android:layout_marginTop="32dp"
+                    android:layout_marginStart="28dp"
+                    android:layout_marginTop="9dp"
+                    android:layout_marginBottom="12dp"
+                    android:layout_toEndOf="@+id/image_profile"
                     android:fontFamily="@font/lato"
                     android:text="name"
                     android:textColor="@color/darkGrey"
@@ -106,7 +124,10 @@
                     android:id="@+id/details"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
+                    android:layout_below="@+id/image_profile"
+                    android:layout_alignStart="@+id/image_profile"
+                    android:layout_marginStart="1dp"
+                    android:layout_marginTop="21dp"
                     android:fontFamily="@font/cocogoose"
                     android:text="Product Details"
                     android:textColor="@color/black"
@@ -114,25 +135,32 @@
                     app:layout_constraintStart_toStartOf="@+id/image_profile"
                     app:layout_constraintTop_toBottomOf="@id/image_profile" />
 
+
                 <TextView
                     android:id="@+id/description"
                     android:layout_width="318dp"
                     android:layout_height="wrap_content"
+                    android:layout_below="@+id/details"
+                    android:layout_alignStart="@+id/details"
+                    android:layout_marginStart="-1dp"
+                    android:layout_marginTop="13dp"
                     android:textColor="@color/black"
                     app:layout_constraintStart_toStartOf="@+id/details"
                     app:layout_constraintTop_toBottomOf="@id/details" />
-
 
                 <TextView
                     android:id="@+id/quantity_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="40dp"
+                    android:layout_below="@+id/description"
+                    android:layout_alignStart="@+id/description"
+                    android:layout_marginStart="0dp"
+                    android:layout_marginTop="13dp"
                     android:fontFamily="@font/cocogoose"
+
                     android:text="Available Stock"
                     android:textColor="@color/black"
                     android:textSize="13sp"
-
                     app:layout_constraintStart_toStartOf="@+id/description"
                     app:layout_constraintTop_toBottomOf="@id/description" />
 
@@ -140,8 +168,13 @@
                     android:id="@+id/quantity"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="20dp"
+                    android:layout_alignTop="@+id/quantity_text"
 
+                    android:layout_alignBottom="@+id/quantity_text"
+                    android:layout_marginStart="41dp"
+                    android:layout_marginTop="1dp"
+                    android:layout_marginBottom="2dp"
+                    android:layout_toEndOf="@+id/quantity_text"
                     android:text="34"
                     android:textColor="@color/black"
                     android:textSize="13sp"
@@ -152,12 +185,14 @@
                     android:id="@+id/category_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
+                    android:layout_below="@+id/quantity_text"
+                    android:layout_alignStart="@+id/quantity_text"
+                    android:layout_alignEnd="@+id/quantity_text"
+                    android:layout_marginTop="13dp"
                     android:fontFamily="@font/cocogoose"
                     android:text="Category"
                     android:textColor="@color/black"
                     android:textSize="13sp"
-
                     app:layout_constraintStart_toStartOf="@+id/quantity_text"
                     app:layout_constraintTop_toBottomOf="@id/quantity" />
 
@@ -165,10 +200,15 @@
                     android:id="@+id/category"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
+                    android:layout_alignStart="@+id/quantity"
+                    android:layout_alignTop="@+id/category_text"
+
+                    android:layout_alignBottom="@+id/category_text"
+                    android:layout_marginStart="0dp"
+                    android:layout_marginTop="1dp"
+                    android:layout_marginBottom="2dp"
                     android:text="Computer"
                     android:textColor="@color/black"
-
                     android:textSize="13sp"
                     app:layout_constraintStart_toStartOf="@+id/quantity"
                     app:layout_constraintTop_toBottomOf="@id/quantity" />
@@ -177,13 +217,18 @@
                     android:id="@+id/location_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
+                    android:layout_below="@+id/category_text"
+                    android:layout_alignStart="@+id/category_text"
+                    android:layout_alignEnd="@+id/category_text"
+                    android:layout_marginStart="0dp"
+                    android:layout_marginTop="13dp"
+                    android:layout_marginEnd="48dp"
+
                     android:layout_marginBottom="20dp"
                     android:fontFamily="@font/cocogoose"
                     android:text="Location"
                     android:textColor="@color/black"
                     android:textSize="13sp"
-
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="@+id/category_text"
                     app:layout_constraintTop_toBottomOf="@id/category"
@@ -193,7 +238,12 @@
                     android:id="@+id/location"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
+                    android:layout_alignStart="@+id/category"
+                    android:layout_alignTop="@+id/location_text"
+                    android:layout_alignBottom="@+id/location_text"
+                    android:layout_marginStart="0dp"
+                    android:layout_marginTop="1dp"
+                    android:layout_marginBottom="2dp"
                     android:text="Sabah"
                     android:textColor="@color/black"
                     android:textSize="13sp"
@@ -207,8 +257,12 @@
 
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:layout_marginTop="20dp"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginStart="50dp"
+                    android:layout_marginTop="308dp"
+                    android:layout_marginEnd="61dp"
                     android:layout_marginBottom="100dp"
                     android:background="@drawable/button1"
                     android:fontFamily="@font/cocogoose"
@@ -227,7 +281,7 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/location"
                     app:layout_constraintVertical_bias="1.0" />
-            </androidx.constraintlayout.widget.ConstraintLayout>
+            </RelativeLayout>
 
 
         </ScrollView>
