--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -35,6 +35,32 @@
                     android:textSize="25sp"
                     android:textStyle="bold" />
 
+                <ImageView
+                    android:id="@+id/moon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBottom="@+id/logout2"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginTop="0dp"
+                    android:layout_marginEnd="15dp"
+                    android:layout_marginBottom="0dp"
+                    android:layout_toStartOf="@+id/logout2"
+                    android:src="@drawable/moon"
+                    android:visibility="visible"
+                    android:onClick="btnNightMode"/>
+
+                <ImageView
+                    android:id="@+id/sun"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_alignBottom="@+id/logout2"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginTop="1dp"
+                    android:layout_marginEnd="48dp"
+                    android:layout_marginBottom="-1dp"
+                    android:layout_toStartOf="@+id/logout2"
+                    android:src="@drawable/sun"
+                    android:visibility="visible" />
 
                 <ImageView
                     android:id="@+id/logout2"
